fix: fixed z-index

--- a/src/app/shared/product-card/product-card.component.scss
+++ b/src/app/shared/product-card/product-card.component.scss
@@ -14,7 +14,7 @@
 
   .badge-container {
     position: absolute;
-    z-index: 1000;
+    z-index: 998;
     top: 10px;
     left: 10px;
   }
